syntax = "proto3";

// Package types defines typesly used types agnostic to the node role on the Sonr network.
package sonrio.motor.core.v1;
import "core/v1/core.proto";
option go_package = "github.com/sonr-io/sonr/pkg/types";

// Direction is the direction of a stream.
enum Direction {
  // Unspecified is the default value.
  DIRECTION_UNSPECIFIED = 0;

  // Incoming is the direction of an incoming stream.
  DIRECTION_INCOMING = 1;

  // Outgoing is the direction of an outgoing stream.
  DIRECTION_OUTGOING = 2;
}

// For Transfer File Payload
message FileItem {
  core.v1.MIME mime = 1; // Standard Mime Type
  string name = 2;         // File Name without Path
  string path = 3;         // File Location
  int64 size = 4;          // File Size in Bytes
  Thumbnail thumbnail = 5; // Thumbnail of File
  int64 last_modified = 6;  // Last Modified Time in Seconds
}

// Payload is Data thats being Passed
message Payload {
  repeated Item items = 1; // Payload Items
  Peer owner = 2;       // PROFILE: General Sender Info
  int64 size = 3;          // Payload Size in Bytes
  int64 created_at = 4;     // Payload Creation Time in Seconds

  // Item in Payload
  message Item {
    MIME mime = 1;  // MIME of the Item
    int64 size = 2; // Size of the Item in Bytes

    // Attached Data
    oneof data {
      FileItem file = 3;       // FILE: File Item
      string url = 4;         // URL: Url Item
      string message = 5; // MESSAGE: Message Item
    }

    // Thumbnail of the Item
    Thumbnail thumbnail = 6;         // Thumbnail of the Item
  }
}

// SupplyItem is an item supplied to be a payload
message SupplyItem {
    string path = 1; // Supply Path
    optional bytes thumbnail = 2; // Supply Path of the Thumbnail
}

// Thumbnail of File
message Thumbnail {
  bytes buffer = 1; // Thumbnail Buffer
  MIME mime = 2;    // Mime Type
}
